game name changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     
     <div id="heading">
-        FALL BALL
+        FREE FALL
     </div>
     <div id="difficultyLevel">
         <div id="diffHeading">
