--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <title>FALL BALL</title>
+  <title>FREE FALL</title>
 </head>
 
 <body>
